Fixed sizing of columns in flex-main, fixed position of menu-and-search to top of page on mobile

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -5,6 +5,13 @@
   display: none;
 }
 
+.post {
+  width: 100%;
+  height: 650px;
+  margin-bottom: 24px;
+  border-radius: 12px;
+}
+
 .above {
   margin-left: 5rem;
 }
@@ -52,9 +59,9 @@
 }
 
 .flex-main > .column {
-  width: 45%;
-  margin-left: 24px;
-  margin-right: 24px;
+  width: 50%;
+  padding-left: 24px;
+  padding-right: 24px;
   display: flex;
   flex-direction: column;
 }
@@ -112,6 +119,8 @@
 
   .flex-main > .column {
     width: 100%;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .flex-main {
@@ -135,6 +144,10 @@
   }
 
   .menu-and-search {
+    position: fixed;
+    background-color: white;
+    padding-bottom: 12px;
+    width: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -218,7 +231,7 @@
 
 .postpicture {
   width: 100%;
-  height: 160%;
+  height: 70%;
   border-radius: 10px;
   background-position: center;
   display: flex;
